# milagro-crypto-c

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Makefile  Makefile.docker  README.md  bower.json  buildMulti.sh  config.mk  dockerbuild.sh  linux.md
benchmark/: CMakeLists.txt  benchtest_ec.c  benchtest_ec_ZZZ.c  benchtest_pair.c  benchtest_pair_ZZZ.c  benchtest_rsa.c  benchtest_rsa_WWW.c
examples/: CMakeLists.txt  amcl_build.c  testall.c  testdvs.c  testdvs_ZZZ.c  testdvs_ZZZ.c.in  testecdh.c  testecdh_ZZZ.c  testecdh_ZZZ.c.in  testecm.c  testmpin.c  testmpin_ZZZ.c  testmpin_ZZZ.c.in  testrsa.c  testwcc.c  testwcc_ZZZ.c  testwcc_dta.c  testwcc_dta_ZZZ.c  testwcc_dta_ZZZ.c.in  testwcc_tp.c  testwcc_tp_ZZZ.c  testwcc_tp_ZZZ.c.in  testx509.c
examples/go/: CMakeLists.txt  test_ecdsa_random_ZZZ.go  test_mpinTwoPass_ZZZ.go  test_mpin_ZZZ.go  test_mpin_race_ZZZ.go  test_mpinfull_ZZZ.go  test_mpinfull_tp_ZZZ.go  test_rsa_WWW.go  test_rsa_sign_WWW.go  time_mpin_ZZZ.go
examples/multicurve/: README.md  amclAPI.h  build.sh  buildlib.sh  config.mk
examples/multicurve/example1/: README.md  build.sh  compile.sh  config_curve1.mk  testmpin.c  testmpin_multi_curves.c
include/: CMakeLists.txt  DLLDefines.h  amcl.h  amcl.h.in  amcl_.h  arch.h  arch.h.in  big.h  big.h.in  big_XXX.h  config.h.in  config_big_XXX.h  config_curve_ZZZ.h  config_field_YYY.h  ecdh.h  ecdh.h.in  ecdh_support.h  ecp.h  ecp.h.in  ecp2.h.in  ecp2_ZZZ.h  ecp_ZZZ.h  ff.h  fp.h  fp12.h.in  fp12_YYY.h  fp2_YYY.h  fp4.h.in  mpin.h  mpin.h.in  mpin_ZZZ.h  pair_ZZZ.h  pbc_support.h  rsa.h  rsa_WWW.h  rsa_support.h  utils.h  version.h  wcc.h  wcc.h.in  (+2 more)
src/: CMakeLists.txt  aes.c  amcl_.h  big.c  ecdh.c  ecp.c  ecp2.c  ecp2_ZZZ.c  ecp_ZZZ.c  faster_XXX.c  fastest_YYY.c  ff.c  fp.c  fp12.c  fp2.c  fp4.c  fp_YYY.c  gcm.c  hash.c  maxstack.c  mpin.c  mpin_ZZZ.c  oct.c  pair.c  pair_ZZZ.c  rand.c  rom.c  rom_curve_BN254CX.c  rsa.c  rsa_support.c  testecdh.c  utils.c  utils.c.orig  version.c  wcc.c  wcc.c.in  wcc_ZZZ.c  x509.c
test/: CMakeLists.txt  test_aes_decrypt.c  test_aes_encrypt.c  test_big_arithmetic.c  test_big_arithmetics.c  test_big_arithmetics_XXX.c  test_big_consistency.c  test_big_consistency_XXX.c  test_ecc.c  test_ecc_ZZZ.c.in  test_ecdh.c  test_ecdh_ZZZ.c.in  test_ecdsa_keypair.c  test_ecdsa_keypair_ZZZ.c  test_ecdsa_sign  test_ecdsa_sign.c  test_ecdsa_sign_ZZZ.c.in  test_ecdsa_verify.c  test_ecdsa_verify_ZZZ.c.in  test_ecm.c  test_ecp2_arithmetics.c  test_ecp_arithmetics.c  test_ecp_arithmetics_ZZZ.c  test_fp12_arithmetics.c  test_fp2_arithmetics.c  test_fp2_arithmetics_YYY.c  test_fp4_arithmetics.c  test_fp4_arithmetics_YYY.c  test_fp_arithmetic.c  test_fp_arithmetics.c  test_fp_arithmetics_YYY.c  test_gcm_decrypt.c  test_gcm_encrypt.c  test_hash.c  test_mpin.c  test_mpin_ZZZ.c  test_mpin_bad_pin.c  test_mpin_bad_pin_ZZZ.c  test_mpin_bad_pin_ZZZ.c.in  test_mpin_bad_token.c  (+57 more)
test/benchmark/: CMakeLists.txt
test/benchmarks/: CMakeLists.txt  benchtest_ec.c  benchtest_pair.c  benchtest_rsa.c
test/pythonCFFI/: CMakeLists.txt
wrappers/go/: CMakeLists.txt  README.md  README.txt  amcl.go  amcl.go.in  c.go  ecdsa.go.in  ecdsa_BLS383_generated.go  ecdsa_GOLDILOCKS_generated.go  ecdsa_NIST256_generated.go  ecdsa_ZZZ.go  ecdsa_ZZZ_test.go  ecdsa_support.go  ecdsa_test.go  mpin.go  mpin.go.in  mpin_BLS383_generated.go  mpin_ZZZ.go  mpin_ZZZ_test.go  mpin_dvs.go.in  mpin_dvs_ZZZ.go  mpin_dvs_ZZZ_test.go  mpin_dvs_test.go  mpin_dvs_test_ZZZ.go  mpin_kel.go.in  mpin_kel_test.go  mpin_test.go  pbc_support.go  pbc_support_test.go  pbc_test.go  readme.txt  rsa.go  rsa.go.in  rsa_3072_generated.go  rsa_WWW.go  rsa_WWW_test.go  rsa_support.go  rsa_test.go
wrappers/go/examples/: CMakeLists.txt  test_ecdsa.go  test_ecdsa_ZZZ.go  test_ecdsa_random.go  test_ecdsa_random_ZZZ.go  test_mpin.go  test_mpinTwoPass.go  test_mpinTwoPass_ZZZ.go  test_mpin_ZZZ.go  test_mpin_race.go  test_mpin_race_ZZZ.go  test_mpinfull.go  test_mpinfullAnon.go  test_mpinfull_ZZZ.go  test_mpinfull_tp.go  test_mpinfull_tp_ZZZ.go  test_rsa.go  test_rsa_WWW.go  test_rsa_sign.go  test_rsa_sign_WWW.go  time_mpin.go
wrappers/go/mpin_examples/: README.txt  test_mpin.go  test_mpinTwoPass.go  test_mpin_race.go  test_mpinfull.go  test_mpinfullAnon.go  time_mpin.go
wrappers/go/src/github.com/miracl/amcl/: amcl.go  c.go  clear.go  ecdsa.go  ecdsa.go.tmpl  ecdsa_BLS383_generated.go  ecdsa_BLS383_wrappers_generated.go  ecdsa_BN254CX_generated.go  ecdsa_BN254CX_wrappers_generated.go  ecdsa_BN254_generated.go  ecdsa_BN254_wrappers_generated.go  ecdsa_ED25519_generated.go  ecdsa_ED25519_wrappers_generated.go  ecdsa_GOLDILOCKS_generated.go  ecdsa_GOLDILOCKS_wrappers_generated.go  ecdsa_NIST256_generated.go  ecdsa_NIST256_wrappers_generated.go  ecdsa_test.go  ecdsa_wrappers.go.tmpl  error.go  gen.go  mpin.go.tmpl  mpin_BLS383_generated.go  mpin_BLS383_wrappers_generated.go  mpin_BN254CX_generated.go  mpin_BN254CX_wrappers_generated.go  mpin_BN254_generated.go  mpin_BN254_wrappers_generated.go  mpin_kangaroo_BLS383_wrappers_generated.go  mpin_kangaroo_BN254CX_wrappers_generated.go  mpin_kangaroo_BN254_wrappers_generated.go  mpin_test.go  octet.go  octet_test.go  pbc.go  pbc_test.go  pbc_wrappers_generated.go  rand.go  rand_test.go  rand_wrappers_generated.go  (+15 more)
wrappers/go/src/github.com/miracl/amcl/wrap/: amcl.go  c.go  ecdsa.go  ecdsa.go.tmpl  ecdsa_BLS383_generated.go  ecdsa_BLS383_wrappers_generated.go  ecdsa_BN254CX_generated.go  ecdsa_BN254CX_wrappers_generated.go  ecdsa_BN254_generated.go  ecdsa_BN254_wrappers_generated.go  ecdsa_ED25519_generated.go  ecdsa_ED25519_wrappers_generated.go  ecdsa_GOLDILOCKS_generated.go  (+40 more)
wrappers/go/src/github.com/miracl/mpin/: README.txt  mpin.go
wrappers/go/src/github.com/miracl/mpin_examples/: test_mpin.go  test_mpinTwoPass.go  test_mpinfull.go  test_mpinfullAnon.go  time_mpin.go
wrappers/python/: CMakeLists.txt  README.md  TestMPIN.py  TestMPINAnon.py  TestMPINAnonInstall.py  TestMPINInstall.py  TestMPINInstall_ZZZ.py  TestMPIN_BN254CX.py  TimeMPIN.py  TimeMPIN_ZZZ.py  mpin.py  mpin_ZZZ.py  wcc.py  wcc_ZZZ.py
(+199 files in other folders)
